@@ -131,9 +131,20 @@ megabytes.
 Behave as if each pattern has the \fB/S\fP modifier; in other words, force each
 pattern to be studied. If \fB-s+\fP is used, all the JIT compile options are
 passed to \fBpcre[16]_study()\fP, causing just-in-time optimization to be set
-up if it is available, for both full and partial matching. If \fB-s++\fP is 
-used, the text "(JIT)" is added to the first output line after a match or no 
-match when JIT-compiled code was actually used.
+up if it is available, for both full and partial matching. Specific JIT compile 
+options can be selected by following \fB-s+\fP with a digit in the range 1 to 
+7, which selects the JIT compile modes as follows:
+.sp
+  1  normal match only
+  2  soft partial match only
+  3  normal match and soft partial match
+  4  hard partial match only
+  6  soft and hard partial match
+  7  all three modes (default)
+.sp        
+If \fB-s++\fP is used instead of \fB-s+\fP (with or without a following digit),
+the text "(JIT)" is added to the first output line after a match or no match
+when JIT-compiled code was actually used.
 .P
 If the \fB/I\fP or \fB/D\fP option is present on a pattern (requesting output
 about the compiled pattern), information about the result of studying is not
@@ -389,13 +400,28 @@ never studied, independently of \fB-s\fP. This feature is used in the test
 files in a few cases where the output is different when the pattern is studied.
 .P
 If the \fB/S\fP modifier is immediately followed by a + character, the call to
-\fBpcre[16]_study()\fP is made with the PCRE_STUDY_JIT_COMPILE option,
-requesting just-in-time optimization support if it is available. Note that
-there is also a \fB/+\fP modifier; it must not be given immediately after
-\fB/S\fP because this will be misinterpreted. If JIT studying is successful, it
-will automatically be used when \fBpcre[16]_exec()\fP is run, except when
-incompatible run-time options are specified. These include the partial matching
-options; a complete list is given in the
+\fBpcre[16]_study()\fP is made with all the JIT study options, requesting
+just-in-time optimization support if it is available, for both normal and
+partial matching. If you want to restrict the JIT compiling modes, you can 
+follow \fB/S+\fP with a digit in the range 1 to 7:
+.sp
+  1  normal match only
+  2  soft partial match only
+  3  normal match and soft partial match
+  4  hard partial match only
+  6  soft and hard partial match
+  7  all three modes (default)
+.sp        
+If \fB/S++\fP is used instead of \fB/S+\fP (with or without a following digit),
+the text "(JIT)" is added to the first output line after a match or no match
+when JIT-compiled code was actually used.
+.P
+Note that there is also an independent \fB/+\fP modifier; it must not be given
+immediately after \fB/S\fP or \fB/S+\fP because this will be misinterpreted. 
+.P
+If JIT studying is successful, the compiled JIT code will automatically be used
+when \fBpcre[16]_exec()\fP is run, except when incompatible run-time options
+are specified. For more details, see the
 .\" HREF
 \fBpcrejit\fP
 .\"
@@ -940,6 +966,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 20 February 2012
+Last updated: 21 February 2012
 Copyright (c) 1997-2012 University of Cambridge.
 .fi
