@@ -48,10 +48,104 @@ Study returned NULL
     aaaabcde
 Error -27 (JIT stack limit reached)
     
+/-- Test various compile modes --/ 
+    
 /abcd/S++
     abcd
  0: abcd (JIT)
     xyz  
+No match (JIT)
+
+/abcd/S+
+    abcd
+ 0: abcd (JIT)
+    ab\P
+Partial match: ab (JIT)
+    ab\P\P
+Partial match: ab (JIT)
+    xyz
+No match (JIT)
+
+/abcd/S++
+    abcd
+ 0: abcd (JIT)
+    ab\P
+Partial match: ab (JIT)
+    ab\P\P
+Partial match: ab (JIT)
+    xyz
+No match (JIT)
+
+/abcd/S++1
+    abcd
+ 0: abcd (JIT)
+    ab\P
+Partial match: ab
+    ab\P\P
+Partial match: ab
+    xyz
+No match (JIT)
+    xyz\P
+No match
+
+/abcd/S++2
+    abcd
+ 0: abcd
+    ab\P
+Partial match: ab (JIT)
+    ab\P\P
+Partial match: ab
+    xyz
+No match
+
+/abcd/S++3
+    abcd
+ 0: abcd (JIT)
+    ab\P
+Partial match: ab (JIT)
+    ab\P\P
+Partial match: ab
+    xyz
+No match (JIT)
+
+/abcd/S++4
+    abcd
+ 0: abcd
+    ab\P
+Partial match: ab
+    ab\P\P
+Partial match: ab (JIT)
+    xyz
+No match
+
+/abcd/S++5
+    abcd
+ 0: abcd (JIT)
+    ab\P
+Partial match: ab
+    ab\P\P
+Partial match: ab (JIT)
+    xyz
+No match (JIT)
+
+/abcd/S++6
+    abcd
+ 0: abcd
+    ab\P
+Partial match: ab (JIT)
+    ab\P\P
+Partial match: ab (JIT)
+    xyz
+No match
+
+/abcd/S++7
+    abcd
+ 0: abcd (JIT)
+    ab\P
+Partial match: ab (JIT)
+    ab\P\P
+Partial match: ab (JIT)
+    xyz
 No match (JIT)
 
 /-- End of testinput12 --/
